# vehicle

./: .gitignore  CMakeLists.txt  README.md  package.xml
carbot_description/: package.xml
carbot_description/launch/: carbot_description.launch
carbot_description/urdf/: carbot.xacro
carbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
carbot_moveit_config/config/: carbot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
carbot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  (+11 more)
launch/: main.launch  visualization.perspective
scripts/: road.py  road.py~  roadPreprocess.py  stereo.py~
src/: stereo.cpp
tf_train/: README.md
trainning/: README.md  custom_resize.py  xml_to_csv.py
vehicle/: CMakeLists.txt  README.md  package.xml
vehicle/config/: main.mvc  main.rviz
vehicle/launch/: main.launch
vehicle/msg/: VanishingPoint.msg  VdispLine.msg
vehicle/scripts/: deprecated_vdisp_line_fitter_code.py  deprecated_vdisp_line_ransac_fitter.py  fit_vdisp_line_ransac.cu  roadPreprocess.py  road_preprocessor.py  vanishing_point_detector.cu  vanishing_point_detector.py  vdisp_line_fitter.cu  vdisp_line_fitter.py  vdisp_line_ransac_fitter.cu
vehicle/scripts/cocoDetection/: cocoDetection.py
vehicle/scripts/cocoDetection/utils/: visualization_utils.py
vehicle/scripts/dijkstraRoadProcess/: README.md  computeCostUtility.py  dijkstraRoadEngine.py  dijkstraUtility.py  visualCalibration.py
vehicle/src/: sensors_sim.cpp  stereo.cpp
(+541 files in other folders)
