<?xml version="1.0"?>
<package format="2">
  <name>vehicle</name>
  <version>0.0.0</version>
  <description>An Autonomous Vehicle Package</description>

  <maintainer email="aureliopuebla_9@hotmail.com">Aurelio Puebla</maintainer>
  <author email="aureliopuebla_9@hotmail.com">Aurelio Puebla</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
